kubernetes/timesheet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timesheet-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: timesheet
  template:
    metadata:
      labels:
        app: timesheet
    spec:
      containers:
        - name: timesheet-container
          image: yourdockerhub/timesheet-ci:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
