kubernetes/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: user-dashboard
  name: user-dashboard
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-dashboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user-dashboard
    spec:
      containers:
      - image: docker.io/4arctic1/user-dashboard
        imagePullPolicy: Always
        name: user-dashboard
        ports:
        - containerPort: 5000  # Port exposed by the Flask app
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      restartPolicy: Always
      securityContext: {}
