kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timesheet-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: timesshet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timesheet-svc
                port:
                  number: 80
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: user-dashboard-ingress
#  namespace: apps
#  annotations:
#    traefik.ingress.kubernetes.io/router.tls: "true"  # Ensure TLS is enabled
#spec:
#  ingressClassName: traefik
#  rules:
#  - host: user-dash.com
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: user-dash-svc
#            port:
#              number: 443  # Your service must expose 443
#  tls:
#  - hosts:
#    - user-dash.com
#    secretName: user-dashboard-tls  # This must exist
#    ---
#      apiVersion: networking.k8s.io/v1
#  kind: Ingress
#  metadata:
#    name: example
#    namespace: foo
#  spec:
#    ingressClassName: nginx
#    rules:
#      - host: www.example.com
#        http:
#          paths:
#            - pathType: Prefix
#              backend:
#                service:
#                  name: exampleService
#                  port:
#                    number: 80
#              path: /
#    # This section is only required if TLS is to be enabled for the Ingress
#    tls:
#      - hosts:
#        - www.example.com
#        secretName: example-tls
